# Financial-Advisor-AI-Copilot-MCP

./: FinancialAdvisorAICopilotMCPService.md  README.md  config.py  demo_mcp_tools.py  main.py  models.py  pyproject.toml  test_basic.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tools_properly.py
.codebuddy/: analysis-summary.json
docs/: API_REFERENCE.md  DEPLOYMENT.md
examples/: advanced_scenarios.py  basic_workflow.py  run_examples.py
